<resources>
    <string name="app_name">App Ban Do DienTu Onlline</string>
    <string name="s_n_ph_m_m_i_nh_t">Sản phẩm mới nhất</string>
    <string name="todo">TODO</string>
    <string name="t_n_lo_i_s_n_ph_m">Tên loại sản phẩm</string>
    <string name="gi_s_n_ph_m">Giá sản phẩm</string>
    <string name="t_n_s_n_ph_m">Tên sản phẩm</string>
    <string name="m_t_i_n_tho_i">Mô tả điện thoại</string>
    <string name="th_m_gi_h_ng">Thêm giỏ hàng</string>
    <string name="m_t_s_n_ph_m">Mô tả sản phẩm</string>
    <string name="chi_ti_t_s_n_ph_m_c_m_t_y">Chi tiết sản phẩm được mô tả ở đây</string>
    <string name="gi_h_ng_b_n_ang_tr_ng">Giỏ hàng bạn đang trống</string>
    <string name="t_ng_ti_n">Tổng tiền:</string>
    <string name="gi_tr">Giá trị</string>
    <string name="thanh_to_n_gi_h_ng">Thanh toán giỏ hàng</string>
    <string name="ti_p_t_c_mua_h_ng">Tiếp tục mua hàng</string>
    <string name="gi_m_n_h_ng">Giá món hàng</string>
    <string name="tru">-</string>
    <string name="_1">1</string>
    <string name="cong">+</string>
    <string name="gi_h_ng">Giỏ hàng</string>
    <string name="th_ng_tin_kh_ch_h_ng">Thông tin khách hàng</string>
    <string name="nh_p_t_n_kh_ch_h_ng">Nhập tên khách hàng</string>
    <string name="nh_p_s_i_n_tho_i_kh_ch_h_ng">Nhập số điện thoại khách hàng</string>
    <string name="nh_p_email_kh_ch_h_ng">Nhập email khách hàng</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="h_y">Hủy</string>
    <string name="title_activity_thongtin">Map</string>
    <string name="th_ng_tin_v_ch_ng_t_i">Thông tin về chúng tôi</string>
    <string name="a_ch_s_3_l_h_ng_phong_th_nh_ph_hu_t_nh_th_a_thi_n_hu">Địa chỉ: Số 3 Lê Hồng Phong, thành phố Huế, tỉnh Thừa Thiên Huế</string>
    <string name="li_n_h_v_i_ch_ng_t_i_myadmin_n_s_3_l_h_ng_phong_th_nh_ph_hu">Liên hệ với chúng tôi : myAdmin.\n Số 3 Lê Hồng Phong, Thành phố Huế.</string>
    <string name="c_ng_ty_tnhh_m_t_th_nh_vi_n_h2n_n_tr_ng_ban_l_v_n_a_n_ph_ban_nguy_n_v_n_b">Công ty TNHH một thành viên H2N\n Trưởng ban: Lê Văn A\n Phó ban: Nguyễn Văn B</string>
    <string name="li_n_h_v_i_ch_ng_t_i_n_facebook_l_ng_c_huy_n_zalo_0365368531">Liên hệ với chúng tôi:\n Facebook: Lê Ngọc Huy \n Zalo : 0365368531</string>
</resources>