<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChiTietSanPham">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarChitietsanpham"
        app:title="Chi tiết sản phẩm"
        android:background="#2938C8"
        android:layout_width="match_parent"
        app:titleTextColor="#fff"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgChiTietSanPham"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="10dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <TextView
                android:id="@+id/txtTenSpCTSP"
                android:textStyle="bold"
                android:text="@string/t_n_s_n_ph_m"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="#f20"
                android:textSize="20sp"
                android:id="@+id/txtGiaSpCTSP"
                android:layout_margin="1dp"
                android:text="@string/gi_s_n_ph_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <Spinner
                android:background="@drawable/custom_spinner"
                android:textAlignment="center"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/spinnerCTSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="1dp"
                android:text="@string/th_m_gi_h_ng"
                android:id="@+id/buttonDatmua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="#880A0F"
            android:textStyle="italic"
            android:textSize="30sp"
            android:text="@string/m_t_s_n_ph_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="5dp"
                android:id="@+id/txtMoTaCTSP"
                android:textSize="18sp"
                android:textColor="#239F86"
                android:text="@string/chi_ti_t_s_n_ph_m_c_m_t_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </ScrollView>
    </LinearLayout>

</LinearLayout>