<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_margin="2dp"
                android:adjustViewBounds="true"
                android:id="@+id/imgLaptop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#0E0E0E"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/t_n_s_n_ph_m"
                    android:id="@+id/textViewLaptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textColor="#000"
                    android:id="@+id/textviewGiaLaptop"
                    android:text="@string/gi_s_n_ph_m"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:text="@string/m_t_i_n_tho_i"
                    android:layout_marginStart="10dp"
                    android:id="@+id/textViewMotaLaptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>