<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/iconnew"
                android:layout_gravity="top|end"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_margin="5dp"
                    android:id="@+id/imgSanPham"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:textColor="#10100F"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/t_n_s_n_ph_m"
                    android:id="@+id/textviewTenSp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="16sp"
                    android:text="@string/gi_s_n_ph_m"
                    android:textColor="#252520"
                    android:gravity="center"
                    android:id="@+id/textviewGiaSp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </FrameLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>